updated description, license, readme, deleted boilerplate chunks

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: maxspeed
-Title: What the Package Does (One Line, Title Case)
+Title: Data Analysis Replication of Hirt et al. 2017 
 Version: 0.0.0.9000
 Authors@R:
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+    person("Gabe", "Preising", , "first.last@example.com", role = c("aut", "cre"))
+Description: This package will remake one of the figures from Hirt et al. 2017 - "A general scaling law reveals why the largest animals are not the fastest".
 License: MIT + file LICENSE
 ByteCompile: true
 Encoding: UTF-8
@@ -12,9 +12,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: 
     bookdown,
-    dplyr,
-    ggplot2,
+    tidyverse (>= 1.3.1),
     here,
     readxl
-Suggests: devtools,
+Suggests: devtools (>= 2.4.2),
     git2r
